Light/Dark mode differences fixed

--- a/src/components/Payment/Payment.css
+++ b/src/components/Payment/Payment.css
@@ -13,8 +13,9 @@ body {
 }
 .background_image {
   position: relative;
-  height: 40vh;
+  height: 75vh;
   overflow: hidden;
+  -webkit-filter: blur(1px);
 }
 
 .background_image img {
@@ -27,7 +28,6 @@ body {
 }
 
 .background_image::after {
-  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -83,7 +83,9 @@ body {
 
 .btn_container {
   display: flex;
+  padding: 1px;
   margin: 0 0;
+
   justify-content: center;
   height: 65px;
   width: 100%;
@@ -183,8 +185,7 @@ body {
 }
 
 .bill_details {
-  padding: 20px;
-
+  padding: 10px;
   background-color: #2d2c2c;
   margin: 3% 3% 0 3%;
   border-radius: 10px;
@@ -208,13 +209,16 @@ body {
 .bill_details th {
   font-weight: bold;
   width: 100%;
+  font-size: 12px;
+  white-space: nowrap;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
 .bill_details td {
   font-weight: bolder;
-  font-size: large;
+  white-space: nowrap;
+  text-align: right;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -447,6 +451,7 @@ body.light-mode {
 }
 
 /* Update these existing styles */
+
 .btn_container button.active {
   background-color: #ca4b49;
   color: white;
@@ -455,6 +460,15 @@ body.light-mode {
 body.light-mode .btn_container button.active {
   background-color: #afcb35;
   color: white;
+}
+
+body.light-mode .btn_container {
+  background-color: #d0ced2;
+}
+
+body.light-mode .btn_container button {
+  background-color: #d0ced2;
+  color: black;
 }
 
 .total_amount h2 {
@@ -484,6 +498,14 @@ body.light-mode .tip_percentage .percentage li.active {
 
 body.light-mode .rate_service .stars_container .star.active {
   color: #afcb35;
+}
+
+body.light-mode .rate_service .feedback_container {
+  background-color: #d0ced2;
+}
+
+body.light-mode .rate_service .feedback_input {
+  background-color: #d0ced2;
 }
 
 .bill_details .total_amount h1 {
